Fix tab wrapping

--- a/src/_includes/css/tabs.css
+++ b/src/_includes/css/tabs.css
@@ -8,8 +8,10 @@ tab-set {
   --unselected-background: var(--background);
   --hover-colour: white;
   --hover-background: #343333;
+
   & [role="tablist"] {
     display: flex;
+    flex-wrap: wrap;
     gap: var(--border-width);
     color: var(--colour);
     background: var(--background);
@@ -27,11 +29,11 @@ tab-set {
     padding: 0.5em;
     color: var(--unselected-colour);
     background-color: var(--unselected-background);
-    /* border-block-end: var(--border-width) solid var(--background); */
+    flex-grow: 1;
+    flex-shrink: 1;
     &[aria-selected=true] {
       color: var(--selected-colour);
       background-color: var(--selected-background);
-      /* border-block-end-color: var(--selected-background); */
     }
     &:hover {
       color: var(--hover-colour);
